tests/samples/negative/functions/function_prototype_after_definition.ax
module function_prototype_after_definition;

fn value() -> i32 {
    return 0;
}

fn value() -> i32;

fn main() -> i32 {
    return value();
}
